--- a/src/main/ShoppingCart/ShoppingCart.fxml
+++ b/src/main/ShoppingCart/ShoppingCart.fxml
@@ -9,6 +9,7 @@
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.text.Font?>
 
 <fx:root fx:id="shoppingCartMainAnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="960.0" type="AnchorPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
@@ -16,13 +17,13 @@
          <top>
             <Pane prefHeight="101.0" prefWidth="960.0" style="-fx-background-color: #037C99;" BorderPane.alignment="CENTER">
                <children>
-                  <Button layoutX="801.0" layoutY="12.0" mnemonicParsing="false" prefHeight="64.0" prefWidth="123.0" text="Button" />
+                  <Button layoutX="801.0" layoutY="12.0" mnemonicParsing="false" prefHeight="64.0" prefWidth="123.0" text="Kundservice &amp; hjälp" />
                   <ImageView fitHeight="81.0" fitWidth="423.0" layoutX="247.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true" />
                </children>
             </Pane>
          </top>
          <center>
-            <Pane prefHeight="573.0" prefWidth="960.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER">
+            <Pane fx:id="sumPriceLabel" prefHeight="573.0" prefWidth="960.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER">
                <children>
                   <Pane layoutX="72.0" layoutY="23.0" prefHeight="590.0" prefWidth="826.0" style="-fx-background-color: #B1D5F6;">
                      <children>
@@ -37,13 +38,34 @@
                                                 <FlowPane fx:id="shoppingCartFlowPane" prefHeight="319.0" prefWidth="767.0" stylesheets="@../Res/styles.css" />
                                              </content>
                                           </ScrollPane>
-                                          <Label layoutX="113.0" layoutY="14.0" text="Namn" />
-                                          <Label layoutX="253.0" layoutY="14.0" text="Styckpris" />
-                                          <Label layoutX="409.0" layoutY="14.0" text="Antal" />
-                                          <Label layoutX="560.0" layoutY="14.0" text="Totalpris" />
-                                          <Label layoutX="51.0" layoutY="372.0" text="Label" />
-                                          <Button fx:id="saveButton" layoutX="453.0" layoutY="361.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="96.0" text="Button" />
-                                          <Label fx:id="sumPriceLabel" layoutX="682.0" layoutY="369.0" text="Label" />
+                                          <Label layoutX="121.0" layoutY="2.0" text="Produkt">
+                                             <font>
+                                                <Font size="24.0" />
+                                             </font></Label>
+                                          <Label layoutX="451.0" layoutY="2.0" text="Styckpris">
+                                             <font>
+                                                <Font size="24.0" />
+                                             </font></Label>
+                                          <Label layoutX="290.0" layoutY="2.0" text="Antal">
+                                             <font>
+                                                <Font size="24.0" />
+                                             </font></Label>
+                                          <Label layoutX="589.0" layoutY="2.0" text="Totalpris">
+                                             <font>
+                                                <Font size="24.0" />
+                                             </font></Label>
+                                          <Label layoutX="35.0" layoutY="364.0" text="Totalbelopp">
+                                             <font>
+                                                <Font name="System Bold" size="30.0" />
+                                             </font></Label>
+                                          <Button fx:id="saveButton" layoutX="391.0" layoutY="365.0" mnemonicParsing="false" prefHeight="43.0" prefWidth="187.0" text="Spara som inköpslista">
+                                             <font>
+                                                <Font size="16.0" />
+                                             </font></Button>
+                                          <Label fx:id="totalSumLabel" layoutX="671.0" layoutY="370.0" text="X kr">
+                                             <font>
+                                                <Font name="System Bold" size="30.0" />
+                                             </font></Label>
                                           <ImageView fx:id="saveTooltip" fitHeight="31.0" fitWidth="37.0" layoutX="552.0" layoutY="361.0" pickOnBounds="true" preserveRatio="true" />
                                        </children>
                                     </AnchorPane>
@@ -59,7 +81,10 @@
                         </Pane>
                         <Pane layoutX="23.0" layoutY="24.0" prefHeight="43.0" prefWidth="778.0" style="-fx-background-color: white;">
                            <children>
-                              <Label fx:id="pageNameLabel" layoutX="370.0" layoutY="13.0" text="Delsida" />
+                              <Label fx:id="pageNameLabel" layoutX="292.0" layoutY="-5.0" text="KUNDVAGN">
+                                 <font>
+                                    <Font size="36.0" />
+                                 </font></Label>
                            </children>
                         </Pane>
                      </children>
@@ -68,6 +93,6 @@
             </Pane>
          </center>
       </BorderPane>
-      <Button fx:id="homeButton" layoutX="26.0" layoutY="12.0" mnemonicParsing="false" onMouseClicked="#closeWizard" prefHeight="64.0" prefWidth="97.0" text="Button" />
+      <Button fx:id="homeButton" layoutX="26.0" layoutY="12.0" mnemonicParsing="false" onMouseClicked="#closeWizard" prefHeight="64.0" prefWidth="97.0" text="Tillbaka till startsidan" wrapText="true" />
    </children>
 </fx:root>
