--- a/src/main/WideShoppingCartItem/WideShoppingCartItem.fxml
+++ b/src/main/WideShoppingCartItem/WideShoppingCartItem.fxml
@@ -1,40 +1,53 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="750.0" style="-fx-background-color: pink;" type="AnchorPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="82.0" prefWidth="750.0" style="-fx-background-color: pink;" type="AnchorPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label fx:id="itemLabel" layoutX="127.0" layoutY="14.0" prefHeight="30.0" prefWidth="118.0" text="Paprika" />
-      <ImageView fx:id="itemImage" fitHeight="90.0" fitWidth="90.0" layoutX="8.0" layoutY="4.0" pickOnBounds="true" preserveRatio="true">
+      <Label fx:id="itemLabel" layoutX="105.0" layoutY="27.0" prefHeight="35.0" prefWidth="159.0" text="Paprika">
+         <font>
+            <Font size="22.0" />
+         </font></Label>
+      <ImageView fx:id="itemImage" fitHeight="75.0" fitWidth="75.0" layoutX="8.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../Res/Images/chick.png" />
          </image></ImageView>
-      <Label fx:id="totalPriceLabel" layoutX="563.0" layoutY="37.0" prefHeight="30.0" prefWidth="45.0" text="kr" textAlignment="RIGHT" />
-      <Label fx:id="amountLabel" layoutX="417.0" layoutY="32.0" prefHeight="40.0" prefWidth="81.0" text="0">
+      <Label fx:id="totalPriceLabel" layoutX="582.0" layoutY="29.0" prefHeight="32.0" prefWidth="75.0" text="kr" textAlignment="RIGHT">
          <font>
-            <Font size="24.0" />
+            <Font size="22.0" />
          </font></Label>
-      <Label fx:id="unitPriceLabel" layoutX="245.0" layoutY="38.0" prefHeight="30.0" prefWidth="45.0" text="kr" textAlignment="RIGHT" />
-      <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="366.0" layoutY="30.0" onMouseClicked="#onMinusButtonPressed" pickOnBounds="true" preserveRatio="true">
+      <Label fx:id="unitPriceLabel" layoutX="430.0" layoutY="29.0" prefHeight="32.0" prefWidth="129.0" text="kr" textAlignment="RIGHT">
+         <font>
+            <Font size="22.0" />
+         </font></Label>
+      <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="228.0" layoutY="23.0" onMouseClicked="#onMinusButtonPressed" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../Res/Images/minus.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="478.0" layoutY="29.0" onMouseClicked="#onPlusButtonPressed" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="335.0" layoutY="23.0" onMouseClicked="#onPlusButtonPressed" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../Res/Images/plus.png" />
          </image>
       </ImageView>
-      <Label fx:id="unitSuffixLabel" layoutX="274.0" layoutY="45.0" text="unitSuffix" />
-      <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="607.0" layoutY="50.0" onMouseClicked="#removeShoppingItem" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="45.0" fitWidth="50.0" layoutX="688.0" layoutY="26.0" onMouseClicked="#removeShoppingItem" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../Res/Images/paperbin.png" />
          </image>
       </ImageView>
-      <Label layoutX="600.0" layoutY="35.0" text="Ta bort" />
+      <Label alignment="CENTER" layoutX="680.0" layoutY="1.0" text="Ta bort">
+         <font>
+            <Font size="18.0" />
+         </font></Label>
+      <TextField fx:id="amountTextField" alignment="CENTER" layoutX="278.0" layoutY="21.0" prefHeight="48.0" prefWidth="50.0">
+         <font>
+            <Font size="22.0" />
+         </font>
+      </TextField>
    </children>
 </fx:root>
