--- a/src/main/HomePage.fxml
+++ b/src/main/HomePage.fxml
@@ -24,7 +24,7 @@
                <children>
                   <Button layoutX="26.0" layoutY="14.0" mnemonicParsing="false" onMouseClicked="#onHomeButtonPressed" prefHeight="64.0" prefWidth="97.0" text="Button" />
                   <Button layoutX="801.0" layoutY="12.0" mnemonicParsing="false" onMouseClicked="#onCustomerSupportPressed" prefHeight="64.0" prefWidth="123.0" text="Button" />
-                  <TextField fx:id="searchBarTextField" layoutX="164.0" layoutY="32.0" prefHeight="25.0" prefWidth="562.0" />
+                  <TextField fx:id="searchBarTextField" layoutX="164.0" layoutY="32.0" onKeyPressed="#searchBarKeyPressed" prefHeight="25.0" prefWidth="562.0" />
                   <Button fx:id="testButton" layoutX="372.0" layoutY="65.0" mnemonicParsing="false" text="TESTKNAPP" />
                </children>
             </Pane>
