--- a/src/main/ListTitlePane/ListTitlePane.fxml
+++ b/src/main/ListTitlePane/ListTitlePane.fxml
@@ -19,8 +19,8 @@
       <Pane prefHeight="58.0" prefWidth="536.0">
          <children>
             <Label fx:id="nameLabel" layoutX="14.0" layoutY="21.0" prefHeight="17.0" prefWidth="64.0" text="nameLabel" />
-            <Button layoutX="316.0" layoutY="2.0" mnemonicParsing="false" text="Lägg till i kundvagn" />
-            <Button layoutX="309.0" layoutY="32.0" mnemonicParsing="false" text="Ta bort som iköpslista" />
+            <Button layoutX="316.0" layoutY="2.0" mnemonicParsing="false" onMouseClicked="#addOrderToCart" text="Lägg till i kundvagn" />
+            <Button layoutX="309.0" layoutY="32.0" mnemonicParsing="false" onMouseClicked="#removeAsSaved" text="Ta bort som iköpslista" />
          </children>
       </Pane>
    </graphic>
