--- a/src/main/WideShoppingCartItem/WideShoppingCartItem.fxml
+++ b/src/main/WideShoppingCartItem/WideShoppingCartItem.fxml
@@ -9,33 +9,33 @@
 
 <fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="82.0" prefWidth="750.0" style="-fx-background-color: pink;" type="AnchorPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label fx:id="itemLabel" layoutX="105.0" layoutY="27.0" prefHeight="35.0" prefWidth="159.0" text="Paprika">
+      <Label fx:id="itemLabel" layoutX="87.0" layoutY="26.0" prefHeight="35.0" prefWidth="185.0" text="Paprika">
          <font>
-            <Font size="22.0" />
+            <Font size="20.0" />
          </font></Label>
       <ImageView fx:id="itemImage" fitHeight="75.0" fitWidth="75.0" layoutX="8.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../Res/Images/chick.png" />
          </image></ImageView>
-      <Label fx:id="totalPriceLabel" layoutX="582.0" layoutY="29.0" prefHeight="32.0" prefWidth="75.0" text="kr" textAlignment="RIGHT">
+      <Label fx:id="totalPriceLabel" layoutX="591.0" layoutY="29.0" prefHeight="32.0" prefWidth="75.0" text="kr" textAlignment="RIGHT">
          <font>
             <Font size="22.0" />
          </font></Label>
-      <Label fx:id="unitPriceLabel" layoutX="430.0" layoutY="29.0" prefHeight="32.0" prefWidth="129.0" text="kr" textAlignment="RIGHT">
+      <Label fx:id="unitPriceLabel" layoutX="452.0" layoutY="29.0" prefHeight="32.0" prefWidth="103.0" text="kr" textAlignment="RIGHT">
          <font>
             <Font size="22.0" />
          </font></Label>
-      <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="228.0" layoutY="23.0" onMouseClicked="#onMinusButtonPressed" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="264.0" layoutY="23.0" onMouseClicked="#onMinusButtonPressed" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../Res/Images/minus.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="335.0" layoutY="23.0" onMouseClicked="#onPlusButtonPressed" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="371.0" layoutY="23.0" onMouseClicked="#onPlusButtonPressed" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../Res/Images/plus.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="45.0" fitWidth="50.0" layoutX="688.0" layoutY="26.0" onMouseClicked="#removeShoppingItem" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="paperBinImage" fitHeight="45.0" fitWidth="50.0" layoutX="688.0" layoutY="26.0" onMouseClicked="#removeShoppingItem" onMouseEntered="#onPaperBinEnter" onMouseExited="#onPaperBinExit" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../Res/Images/paperbin.png" />
          </image>
@@ -44,7 +44,7 @@
          <font>
             <Font size="18.0" />
          </font></Label>
-      <TextField fx:id="amountTextField" alignment="CENTER" layoutX="278.0" layoutY="21.0" prefHeight="48.0" prefWidth="50.0">
+      <TextField fx:id="amountTextField" alignment="CENTER" layoutX="314.0" layoutY="21.0" prefHeight="48.0" prefWidth="50.0">
          <font>
             <Font size="22.0" />
          </font>
