--- a/src/main/ListTitlePane/ListTitlePane.fxml
+++ b/src/main/ListTitlePane/ListTitlePane.fxml
@@ -8,16 +8,16 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<fx:root animated="false" prefHeight="67.0" prefWidth="463.0" stylesheets="@../Res/styles.css" text=" " type="TitledPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root animated="false" expanded="false" graphicTextGap="0.0" prefHeight="67.0" prefWidth="463.0" style="´: black;" stylesheets="@ListTitlePane.css" text=" " type="TitledPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <content>
-      <AnchorPane fx:id="orderTitleAnchorPane" minHeight="0.0" minWidth="0.0" prefHeight="0.0" prefWidth="575.0">
+      <AnchorPane fx:id="orderTitleAnchorPane" minHeight="0.0" minWidth="0.0" prefHeight="0.0" prefWidth="575.0" styleClass="titleFlowPane">
          <children>
-            <FlowPane fx:id="orderTitlePaneFlowPane" layoutX="16.0" layoutY="-2.0" prefHeight="0.0" prefWidth="536.0" style="-fx-background-color: gray;" styleClass="san-serif" />
+            <FlowPane fx:id="orderTitlePaneFlowPane" layoutX="16.0" layoutY="-2.0" prefHeight="0.0" prefWidth="536.0" style="-fx-background-color: gray;" styleClass="titleFlowPane" />
          </children>
       </AnchorPane>
    </content>
    <graphic>
-      <Pane prefHeight="58.0" prefWidth="523.0">
+      <Pane prefHeight="58.0" prefWidth="523.0" stylesheets="@ListTitlePane.css">
          <children>
             <Label fx:id="nameLabel" layoutX="14.0" layoutY="21.0" prefHeight="17.0" prefWidth="64.0" text="nameLabel" />
             <Button layoutX="316.0" layoutY="2.0" mnemonicParsing="false" onMouseClicked="#addOrderToCart" text="Lägg till i kundvagn">
