--- a/src/main/HomePage.fxml
+++ b/src/main/HomePage.fxml
@@ -436,14 +436,9 @@
                                                          <children>
                                                             <Pane prefHeight="92.0" prefWidth="277.0" style="-fx-background-color: #EEEDED;" GridPane.rowIndex="1">
                                                                <children>
-                                                                  <Label layoutX="37.0" layoutY="23.0" text="Nyheter" textFill="#5563ff">
+                                                                  <Label layoutX="37.0" layoutY="45.0" text="Nyheter" textFill="#5563ff">
                                                                      <font>
                                                                         <Font name="SansSerif Bold" size="36.0" />
-                                                                     </font>
-                                                                  </Label>
-                                                                  <Label layoutX="47.0" layoutY="65.0" text="JUST  NU" textFill="#5563ff">
-                                                                     <font>
-                                                                        <Font name="SansSerif Bold" size="25.0" />
                                                                      </font>
                                                                   </Label>
                                                                </children>
@@ -454,12 +449,12 @@
                                                             </Pane>
                                                             <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #EEEDED;" GridPane.rowIndex="2">
                                                                <children>
-                                                                  <ImageView fitHeight="137.0" fitWidth="133.0" layoutX="40.0" layoutY="-2.0" pickOnBounds="true" preserveRatio="true">
+                                                                  <ImageView fitHeight="101.0" fitWidth="112.0" layoutX="54.0" layoutY="8.0" pickOnBounds="true" preserveRatio="true">
                                                                      <image>
                                                                         <Image url="@Res/Images/youtube.png" />
                                                                      </image>
                                                                   </ImageView>
-                                                                  <Label alignment="CENTER" layoutX="6.0" layoutY="122.0" prefHeight="30.0" prefWidth="208.0" text="Så handlar du">
+                                                                  <Label alignment="CENTER" layoutX="6.0" layoutY="104.0" prefHeight="30.0" prefWidth="208.0" text="Så handlar du">
                                                                      <font>
                                                                         <Font name="SansSerif Bold" size="25.0" />
                                                                      </font>
@@ -474,19 +469,9 @@
                                                       </GridPane>
                                                       <Pane prefHeight="293.0" prefWidth="311.0" style="-fx-background-color: #FF545E;">
                                                          <children>
-                                                            <Label layoutX="10.0" layoutY="40.0" rotate="-5.2" style="-fx-background-color: WHITE;" text="VECKANS ERBJUDANDEN" textFill="RED">
-                                                               <font>
-                                                                  <Font name="SansSerif Bold" size="26.0" />
-                                                               </font>
-                                                            </Label>
-                                                            <Label alignment="CENTER" layoutX="57.0" layoutY="172.0" prefHeight="69.0" prefWidth="241.0" style="-fx-background-color: WHITE;" text="KLICKA HÄR!" textFill="RED">
+                                                            <Label alignment="CENTER" layoutX="57.0" layoutY="100.0" prefHeight="69.0" prefWidth="241.0" style="-fx-background-color: WHITE;" text="Erbjudanden" textFill="RED">
                                                                <font>
                                                                   <Font name="SansSerif Bold" size="34.0" />
-                                                               </font>
-                                                            </Label>
-                                                            <Label layoutX="15.0" layoutY="85.0" prefHeight="27.0" prefWidth="325.0" rotate="-4.8" style="-fx-background-color: WHITE;" text="NYA ERBJUDANDEN VARJE MÅNDAG!" textFill="RED">
-                                                               <font>
-                                                                  <Font name="SansSerif Bold" size="17.0" />
                                                                </font>
                                                             </Label>
                                                          </children>
